--- a/no03_dashbordtemplate/style.css
+++ b/no03_dashbordtemplate/style.css
@@ -6,7 +6,9 @@
   font-family: "Ubuntu", sans-serif;
 }
 :root {
-  --blue: #287bff;
+  --blue: #01579b;
+  --blueL: #4f83cc;
+  --blueD: #002f6c;
   --white: #fff;
   --grey: #f5f5ff;
   --black1: #222;
@@ -104,4 +106,120 @@ body {
   border-radius: 50%;
   box-shadow: 35px -35px 0 10px var(--white);
   pointer-events: none;
+}
+
+/* main */
+.main {
+  background: var(--white);
+  position: absolute;
+  width: calc(100% - 300px);
+  left: 300px;
+}
+.contents {
+  background: var(--white);
+  margin: 20px;
+  border-radius: 30px;
+  color: var(--white);
+}
+.bd-example {
+  position: relative;
+  margin: 1rem -0.75rem 0;
+  border: solid #dee2e6;
+  padding: 1.5rem;
+  margin-right: 0;
+  margin-left: 0;
+  border-width: 1px;
+  border-top-left-radius: 0.25rem;
+  border-top-right-radius: 0.25rem;
+}
+.mb-3 {
+  margin-bottom: 1rem !important;
+}
+label {
+  cursor: default;
+  color: var(--black1);
+}
+.form-label {
+  display: inline-block;
+  margin-bottom: 0.5rem;
+}
+.form-control {
+  transition: none;
+  display: block;
+  width: 100%;
+  padding: 0.375rem 0.75rem;
+  font-size: 1rem;
+  font-weight: 400;
+  line-height: 1.5;
+  color: #212529;
+  background-color: #fff;
+  background-clip: padding-box;
+  border: 1px solid #ced4da;
+  appearance: none;
+  border-radius: 0.25rem;
+}
+.form-control:focus {
+  color: #212529;
+  background-color: #fff;
+  border-color: #86b7fe;
+  outline: 0;
+  box-shadow: 0 0 0 0.25rem rgb(13 110 253 / 25%);
+}
+.form-control:disabled,
+.form-control[readonly] {
+  background-color: #e9ecef;
+  pointer-events: none;
+  opacity: 1;
+}
+.form-text {
+  margin-top: 0.25rem;
+  font-size: 0.875em;
+  color: #6c757d;
+}
+.form-select {
+  display: block;
+  width: 100%;
+  padding: 0.375rem 2.25rem 0.375rem 0.75rem;
+  font-size: 1rem;
+  font-weight: 400;
+  line-height: 1.5;
+  color: #212529;
+  background-color: #fff;
+  background-repeat: no-repeat;
+  background-position: right 0.75rem center;
+  background-size: 16px 12px;
+  border: 1px solid #ced4da;
+  border-radius: 0.25rem;
+  appearance: none;
+  transition: none;
+}
+.form-select:disabled,
+.form-select[readonly] {
+  background-color: #e9ecef;
+  pointer-events: none;
+  opacity: 1;
+}
+.btn {
+  display: inline-block;
+  font-weight: 400;
+  line-height: 1.5;
+  text-align: center;
+  text-decoration: none;
+  vertical-align: middle;
+  cursor: pointer;
+  user-select: none;
+  border: 1px solid transparent;
+  padding: 0.375rem 0.75rem;
+  font-size: 1rem;
+  border-radius: 0.25rem;
+}
+.btn-primary {
+  color: #fff;
+  background-color: #0d6efd;
+  border-color: #0d6efd;
+}
+.btn-primary:hover {
+  color: #fff;
+  background-color: #0b5ed7;
+  border-color: #0a58ca;
 }
